[package]
name = "home-assistant-alexa-skill"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_runtime = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.9"
reqwest = { version = "0.11", features = ["blocking", "json"] }
openssl = { version = "0.10", features = ["vendored"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = 3